[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymlens"
version = "0.1.5"
description = "Lightweight ML experiment tracker — log, compare and visualize your ML experiments locally"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Munish Malhotra"}
]
dependencies = [
    "flask",
    "requests",
    "scikit-learn",
    "numpy",
    "pandas",
    "streamlit",
    "plotly",
    "duckdb"
]

[project.scripts]
pymlens = "pymlens.cli:main"

[project.urls]
Homepage = "https://github.com/munishmalhotra6230/model_tracker-MLENS-"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymlens*"]
